--- a/week7_BBS/build.gradle
+++ b/week7_BBS/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-sequrity'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecrityspringsecurity6'
+	
+	
 }
 
 tasks.named('test') {
